test/library/standard/List/init/listInitGenericError.chpl
use List;

class C {
  var x = 10;
}

var l = new list(C);  // C has generic management
writeln(l);
